refactor training parameters and model architecture for improved performance

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "c4dbfce2",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,6 @@
     "from torch.utils.data import DataLoader\n",
     "from torch.optim import Adam\n",
     "from torch.optim.lr_scheduler import StepLR\n",
-    "from accelerate import Accelerator\n",
     "from tqdm.auto import tqdm\n",
     "from sklearn.metrics import accuracy_score\n",
     "import numpy as np\n",
@@ -29,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "58d86729",
    "metadata": {},
    "outputs": [
@@ -39,7 +38,7 @@
        "<module 'dataproccesing' from '/home/grae/Coding projects/SPHnet-pricePrediction/dataproccesing.py'>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "2ae48de4",
    "metadata": {},
    "outputs": [],
@@ -64,7 +63,7 @@
     "    \"target_column\": \"close\",\n",
     "    \"window_size\": 256,\n",
     "    \"batch_size\": 128,\n",
-    "    \"val_size\": 0.2,\n",
+    "    \"val_size\": 0.1,\n",
     "    \"test_size\": 0.1,\n",
     "    }\n",
     "trainLoader, valLoader, testLoader, scaler, feature_columns = dp.process(**dataPARAMS)\n",
@@ -85,17 +84,19 @@
     "}\n",
     "# make sure the class name matches what's defined in model.py\n",
     "model = SPHNet(**modelPARAMS)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-4 )\n",
+    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=10, gamma=0.1)\n",
     "\n",
     "trainingPARAMS = {\n",
     "    \"valGAP\": 1,\n",
     "    \"criterion\": nn.MSELoss(),\n",
-    "    \"epochs\": 4,\n",
+    "    \"epochs\": 20,\n",
     "    \"model\": model,\n",
-    "    \"optimizer\": torch.optim.Adam(model.parameters(), lr=1e-4),\n",
+    "    \"optimizer\": optimizer,\n",
     "    \"trainLoader\": trainLoader,\n",
     "    \"valLoader\": valLoader,\n",
     "    \"testLoader\": testLoader,\n",
-    "    \"scheduler\": StepLR(torch.optim.Adam(model.parameters(), lr=1e-4), step_size=10, gamma=0.1),\n",
+    "    \"scheduler\": scheduler,\n",
     "    \"metrics\": None,\n",
     "}"
    ]
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "ce9f9284",
    "metadata": {},
    "outputs": [
@@ -118,56 +119,280 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1 /4 | Train Loss: 0.0018: 100%|██████████| 556/556 [00:29<00:00, 19.11batch/s]\n"
+      "Epoch 1 /20 | Train Loss: 0.1651: 100%|██████████| 637/637 [00:16<00:00, 38.57batch/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Validation Loss: 0.000502\n"
+      "Epoch 1, Validation Loss: 0.765922\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 2 /4 | Train Loss: 0.0012: 100%|██████████| 556/556 [00:29<00:00, 19.14batch/s]\n"
+      "Epoch 2 /20 | Train Loss: 0.1629: 100%|██████████| 637/637 [00:16<00:00, 38.89batch/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2, Validation Loss: 0.000418\n"
+      "Epoch 2, Validation Loss: 0.765922\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 3 /4 | Train Loss: 0.0010: 100%|██████████| 556/556 [00:28<00:00, 19.27batch/s]\n"
+      "Epoch 3 /20 | Train Loss: 0.1629: 100%|██████████| 637/637 [00:16<00:00, 38.58batch/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 3, Validation Loss: 0.000137\n"
+      "Epoch 3, Validation Loss: 0.765922\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 4 /4 | Train Loss: 0.0009: 100%|██████████| 556/556 [00:28<00:00, 19.26batch/s]"
+      "Epoch 4 /20 | Train Loss: 0.1626: 100%|██████████| 637/637 [00:16<00:00, 38.66batch/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 4, Validation Loss: 0.000488\n"
+      "Epoch 4, Validation Loss: 0.765922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5 /20 | Train Loss: 0.1625: 100%|██████████| 637/637 [00:16<00:00, 38.50batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5, Validation Loss: 0.765922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6 /20 | Train Loss: 0.1629: 100%|██████████| 637/637 [00:16<00:00, 39.41batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6, Validation Loss: 0.765922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7 /20 | Train Loss: 0.1627: 100%|██████████| 637/637 [00:16<00:00, 38.86batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7, Validation Loss: 0.765922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8 /20 | Train Loss: 0.1629: 100%|██████████| 637/637 [00:16<00:00, 38.35batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8, Validation Loss: 0.765922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9 /20 | Train Loss: 0.1626: 100%|██████████| 637/637 [00:16<00:00, 39.70batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9, Validation Loss: 0.765922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10 /20 | Train Loss: 0.1630: 100%|██████████| 637/637 [00:16<00:00, 39.32batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10, Validation Loss: 0.765922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 11 /20 | Train Loss: 0.1626: 100%|██████████| 637/637 [00:16<00:00, 39.29batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 11, Validation Loss: 0.765922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 12 /20 | Train Loss: 0.1625: 100%|██████████| 637/637 [00:13<00:00, 46.35batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 12, Validation Loss: 0.765922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 13 /20 | Train Loss: 0.1626: 100%|██████████| 637/637 [00:14<00:00, 45.19batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 13, Validation Loss: 0.765922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 14 /20 | Train Loss: 0.1630: 100%|██████████| 637/637 [00:14<00:00, 44.09batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 14, Validation Loss: 0.765922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 15 /20 | Train Loss: 0.1626: 100%|██████████| 637/637 [00:15<00:00, 40.20batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 15, Validation Loss: 0.765922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 16 /20 | Train Loss: 0.1630: 100%|██████████| 637/637 [00:16<00:00, 38.29batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 16, Validation Loss: 0.765922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 17 /20 | Train Loss: 0.1626: 100%|██████████| 637/637 [00:16<00:00, 38.44batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 17, Validation Loss: 0.765922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 18 /20 | Train Loss: 0.1632: 100%|██████████| 637/637 [00:16<00:00, 39.79batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 18, Validation Loss: 0.765922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 19 /20 | Train Loss: 0.1624: 100%|██████████| 637/637 [00:16<00:00, 38.91batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 19, Validation Loss: 0.765922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 20 /20 | Train Loss: 0.1625: 100%|██████████| 637/637 [00:16<00:00, 38.35batch/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 20, Validation Loss: 0.765922\n"
      ]
     },
     {
@@ -181,12 +406,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing Loss: 0.0001647191140896604\n"
+      "Testing Loss: 0.14606762179015326\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/bin/ld: cannot find -laio: No such file or directory\n",
+      "collect2: error: ld returned 1 exit status\n",
+      "/usr/bin/ld: cannot find -laio: No such file or directory\n",
+      "collect2: error: ld returned 1 exit status\n"
      ]
     }
    ],
    "source": [
-    "TrainedModel = Train(**trainingPARAMS)"
+    "#TrainedModel = Train(**trainingPARAMS)\n",
+    "TrainedModel = Train(\n",
+    "    **trainingPARAMS\n",
+    ")"
    ]
   },
   {
@@ -274,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "dbc95310",
    "metadata": {},
    "outputs": [
@@ -282,8 +520,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test MSE (orig scale): 1381457.265047\n",
-      "Test R2 (orig scale): 0.997253\n"
+      "Test MSE (orig scale): 1242879307.954662\n",
+      "Test R2 (orig scale): -0.919869\n"
      ]
     }
    ],
@@ -341,23 +579,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "53cd16d9",
+   "execution_count": null,
+   "id": "b88d04a2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Precision: 1.0000\n",
-      "Accuracy: 1.0000\n",
-      "Recall: 1.0000\n"
+      "/home/grae/.local/share/mise/installs/python/3.14.2/lib/python3.14/site-packages/sklearn/metrics/_classification.py:620: UserWarning: A single label was found in 'y_true' and 'y_pred'. For the confusion matrix to have the correct shape, use the 'labels' parameter to pass all known labels.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 4, got 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     12\u001b[39m recall = recall_score(true_dir, pred_dir, zero_division=\u001b[32m0\u001b[39m)\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# Calculate confusion matrix\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m tn, fp, fn, tp = confusion_matrix(true_dir, pred_dir).ravel()\n\u001b[32m     17\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mDirection Prediction Metrics:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     18\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mPrecision: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprecision\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mValueError\u001b[39m: not enough values to unpack (expected 4, got 1)"
      ]
     }
    ],
    "source": [
     "# Direction metrics (compare predicted movement vs last observed close)\n",
-    "from sklearn.metrics import precision_score, accuracy_score, recall_score\n",
+    "from sklearn.metrics import precision_score, accuracy_score, recall_score, confusion_matrix\n",
     "\n",
     "# last_close is array of shape (N, num_features), take idx column\n",
     "last_close_vals = all_last_close[:, idx]\n",
@@ -369,9 +617,18 @@
     "accuracy = accuracy_score(true_dir, pred_dir)\n",
     "recall = recall_score(true_dir, pred_dir, zero_division=0)\n",
     "\n",
+    "# Calculate confusion matrix\n",
+    "tn, fp, fn, tp = confusion_matrix(true_dir, pred_dir).ravel()\n",
+    "\n",
+    "print(f\"Direction Prediction Metrics:\")\n",
     "print(f\"Precision: {precision:.4f}\")\n",
     "print(f\"Accuracy: {accuracy:.4f}\")\n",
-    "print(f\"Recall: {recall:.4f}\")"
+    "print(f\"Recall: {recall:.4f}\")\n",
+    "print(f\"\\nConfusion Matrix:\")\n",
+    "print(f\"TP (up predicted, up actual): {tp}\")\n",
+    "print(f\"TN (down predicted, down actual): {tn}\")\n",
+    "print(f\"FP (up predicted, down actual): {fp}\")\n",
+    "print(f\"FN (down predicted, up actual): {fn}\")"
    ]
   },
   {
